Added 2 endpoints
